--- a/src/app/activity-request-form/activity-request-form.component.html
+++ b/src/app/activity-request-form/activity-request-form.component.html
@@ -9,7 +9,7 @@
                             <span class=" mb-2 text-sm font-medium text-gray-900">Full Name </span>
                             <span class="text-danger">*</span>
                         </label>
-                        <input type="text" name="" id="name" class="bg-slate-100 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="Enter Full Name" formControlName="fullName">
+                        <input type="text" name="" id="name" class="form-control" placeholder="Enter Full Name" formControlName="fullName">
                         <p class="error" *ngIf="appForm.get('fullName')?.invalid && appForm.controls.fullName.touched">Full Name is Required</p>
                     </div>
                     <div class="col-md-6 ">
@@ -20,7 +20,7 @@
                            <input
                               type="text"
                               placeholder="Search or enter email..."
-                              class="bg-slate-100 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 "
+                              class="form-control"
                               [matAutocomplete]="auto"
                               formControlName="reqBy"
                             />
@@ -46,7 +46,7 @@
                     <input
                     type="text"
                     placeholder="Choose Activity Type..."
-                    class="bg-slate-100 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 "
+                    class="form-control"
                     [matAutocomplete]="autoAct"
                     formControlName="activityType"
                   />
@@ -70,7 +70,7 @@
                     </label>
                     <input formControlName="duration" type="text" name="" 
                     id="" 
-                    class="bg-slate-100 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 "
+                    class="form-control"
                     placeholder="Enter Number">
                     <p class="error" *ngIf="appForm.get('duration')?.invalid && appForm.get('duration')?.touched">Please enter number of days</p>
 
@@ -84,12 +84,9 @@
                         <span class="text-danger">*</span>
                     </label>
                     <div class="relative max-w-sm">
-                        <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
-                          <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                            <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
-                          </svg>
-                        </div>
-                        <input datepicker id="default-datepicker" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Select date">
+                      <div>
+                        <p-calendar formControlName="startDate" placeholder="Select Start Date ..." [dateFormat]="'dd/mm/yy'"/>
+                    </div>
                       </div>
                     <p class="error" *ngIf="appForm.get('startDate')?.invalid && appForm.get('startDate')?.touched">Please Enter The Start Date</p>
 
@@ -179,7 +176,7 @@
                         <label for="tasks">
                             <span class="fw-bold span-fs">Attachment when sick leave requested</span>
                         </label>
-                    <!-- <input class="form-control" type="file" id="formFile" formControlName="attachSickLeave"> -->
+                    <input class="form-control" type="file" id="formFile" formControlName="attachSickLeave">
                      
                     </div>
                 </div>
@@ -191,7 +188,7 @@
              
             </div>
             <div class="row mt-4">
-                <button type="submit" class="btn btn-primary d-flex justify-content-center">Submit</button>
+                <button type="submit" class="btn btn-primary d-flex justify-content-center align-content-center">Submit</button>
             </div>
             </form>
         </div>
