--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-activity-desription></app-activity-desription>
-<app-activity-request-form/>
+<!-- <app-activity-desription></app-activity-desription>
+<app-activity-request-form/> -->
+<router-outlet/>
